<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.home.MainTodoActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="101"
        android:title="@string/user_statistics"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sync"
        android:orderInCategory="102"
        android:title="@string/sync"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_offline_map"
        android:orderInCategory="103"
        android:title="@string/offline_map"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_weight_factor"
        android:orderInCategory="104"
        android:title="@string/weight_factor"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="105"
        android:title="@string/set_sort"
        app:showAsAction="never"/>

</menu>
